Fixed up stat module spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -873,6 +873,15 @@ tbody tr {
     display: block;
     clear: both; }
 
+.homepage-wrapper {
+  padding-top: 3em; }
+  @media screen and (min-width: 640px) {
+    .homepage-wrapper {
+      padding-top: 5em; } }
+  @media screen and (min-width: 1024px) {
+    .homepage-wrapper {
+      padding-top: 7.5em; } }
+
 @media screen and (min-width: 1024px) {
   .l-3 {
     width: 24.29907%;
@@ -1499,6 +1508,17 @@ input[type="submit"] {
   color: #007BB6; }
   .social--linkedin:hover, .social--linkedin:active, .social--linkedin:focus {
     color: #005983; }
+
+@media screen and (min-width: 640px) {
+  .stat-module {
+    width: 32.71028%;
+    float: left;
+    margin-right: 0.93458%; }
+    .stat-module:first-child {
+      margin-left: 0; }
+    .stat-module:last-child {
+      float: right;
+      margin-right: 0; } }
 
 .stat-module span {
   font-size: 52px;
